--- a/Ryr.SolutionHistory/Ryr.SolutionHistory.csproj
+++ b/Ryr.SolutionHistory/Ryr.SolutionHistory.csproj
@@ -70,6 +70,7 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Services" />
@@ -97,9 +98,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
-    <Reference Include="XrmToolBox, Version=1.2014.10.28, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="XrmToolBox.Extensibility, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>XrmToolBox\XrmToolBox.exe</HintPath>
+      <HintPath>XrmToolBox\XrmToolBox.Extensibility.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -121,6 +122,7 @@
       <DependentUpon>SolutionDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="ListViewItemComparer.cs" />
+    <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -153,9 +155,7 @@
     <Content Include="LICENCE.txt" />
     <Content Include="XrmToolBox\McTools.Xrm.Connection.dll" />
     <Content Include="XrmToolBox\McTools.Xrm.Connection.WinForms.dll" />
-    <Content Include="XrmToolBox\XrmToolBox.exe">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Content Include="XrmToolBox\XrmToolBox.Extensibility.dll" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
