--- a/Ryr.SolutionHistory/Ryr.SolutionHistory.csproj
+++ b/Ryr.SolutionHistory/Ryr.SolutionHistory.csproj
@@ -174,8 +174,7 @@
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>move Ryr.SolutionHistory* Plugins</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
